# gemini-md-export

./: .gitignore  AGENT-VAULT-INTEGRITY-PROMPT.md  AGENTS.md  CLAUDE.md  GEMINI.md  LEIA-ME.txt  README.md  ROADMAP.md  biome.json  bridge-version.json  diagnose-windows-mcp.ps1  gemini-extension.json  install-windows.cmd  package-lock.json  package.json  pyproject.toml  telemetry.defaults.example.json  telemetry.defaults.json  tsconfig.build.json  tsconfig.json
browser-extension/: activity-content-script.js  artifact-capture.js  background.js  content.js  google-blocker-content-script.js  manifest.json  offscreen.html
commands/: sync.toml
debug/: tampermonkey-probe.user.js
fixtures/: README.md
gemini-cli-extension/: GEMINI.md
hooks/: hooks.json
native-messaging/: README.md  com.augustocaruso.gemini_md_export.template.json
scripts/: bridge-smoke.mjs  build-release-windows-prebuilt.mjs  build-release-windows.mjs  build.mjs  install-macos.sh  install-windows-launcher.cjs  install-windows.mjs  native-broker-release-gate-smoke  native-broker-release-gate-smoke.mjs  native-host-manifest.mjs  publish-gemini-cli-extension-branch.mjs  repair-windows-gemini-extension.ps1  run-tests.mjs  smoke-export-integrity.mjs  update-windows.ps1  vault-repair.mjs
src/: activity-content-script.js  activity-content-script.ts  batch-session.mjs  bridge-server.js  browser-diagnostics.mjs  browser-launch.mjs  chrome-extension-guard.mjs  dom-runner.mjs  extension-background.js  extension-background.ts  extract.mjs  google-blocker-content-script.ts  job-progress-broadcast.mjs  (+14 more)
(+389 files in other folders)
